# A-Maze-ing

./: CONTRIBUTING.md  Makefile  Mon 12_37 PM.tldr  README.md  a_maze_ing.py  config.txt  configparsing.py  generator.py  hamza_maze  old_display.py  pyproject.toml  requirements.txt
Algo/: generator.py
Mazegen/: generator.py  show_the_exit.py
Visualisation/: display.py  parsing.py
mazegen/: __init__.py  generator.py  show_the_exit.py
visualisation/: __init__.py  display.py
