[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generation library"
authors = [
    {name="wkrati"},
    {name="hjalzim"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["mazegen"]
